# Positie-Bepaling

./: .gitignore  Library.py  README.md  arrays.txt  black_with_white-lines.py  black_with_white_lines.py  coords.txt  draw.py  grid.py  gyro_values.py  lidar_tutorial.cpp  lidar_values.py  main.py  main2.py  map_delen.py  read.py  requirements.txt  sample.py  sonar.ino  sonar_values.py  stappen.txt  temp.py  test.py  white_with_black_dots.py  write.py
.history/: main_20230531114650.py  main_20230531114713.py
GUI/: Makefile  main.cpp  object.hpp  picture.hpp  rectangle.hpp  text.hpp
Gyro/: main.cpp
Gyro (Arduino Position)/: main.cpp
Kompas/: main.cpp
Mappen_zijdes/: getCoord.py
html/: annotated.html  class_library_1_1_lidar_measure-members.html  class_library_1_1_lidar_measure.html  class_library_1_1_lidar_x2-members.html  class_library_1_1_lidar_x2.html  class_mouse_data.html  class_store_data.html  classes.html  classmain_1_1_grid_data-members.html  classmain_1_1_grid_data.html  classmain_1_1_mouse_data-members.html  classmain_1_1_mouse_data.html  classmain_1_1_store_data-members.html  classmain_1_1_store_data.html  files.html  functions.html  functions_func.html  functions_vars.html  main_8py.html  md__r_e_a_d_m_e.html  pages.html
latex/: annotated.tex  class_library_1_1_lidar_measure.tex  class_library_1_1_lidar_x2.tex  class_mouse_data.tex  class_store_data.tex  classmain_1_1_grid_data.tex  classmain_1_1_mouse_data.tex  classmain_1_1_store_data.tex  files.tex  (+3 more)
openCV camera Code/: CMakeLists.txt  main.cpp  object.hpp  picture.hpp  rectangle.hpp  text.hpp
(+30 files in other folders)
